--- a/breakout.kv
+++ b/breakout.kv
@@ -10,3 +10,9 @@
    Rectangle:
     pos: self.center_x-5,0
     size: 10, self.height
+  
+  Label:
+   font_size: 70
+   center_x: root.width / 4
+   top: root.bottom - 50
+   text: "0"
